[package]
name = "iwm-swearer"
version = "1.0"
edition = "2021"
authors = ["Jollyc"]
description = "Swear bot based on the I Wanna Maker bad word list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
serenity = { version = "0.11.6", default-features = true}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
